--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body{
 .main-header{
     background-color: rgb(64, 64, 241);
     display: flex;
-    padding: 60px;
-    
+    padding: 50px;
+    margin-bottom: 40px;
     
     
 }
@@ -33,13 +33,31 @@ body{
     border-radius: 10px;
     font-weight: 600; 
     border: 1px solid black;
-    
-}
-.live-button :hover{
-   
-}
-.header-div-2 img{
+} 
+
+   .header-div-2 img{
     width: 550px;
     border-radius: 140px;
     margin-left: 250px;
+}
+
+/* Main Section, Player list Style */
+ .container .player-1, img{
+    width: 300px;
+    height: 256px;
+}
+.shadow-box {
+    background: #FFFFFF;
+    box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+}
+.Container{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
+    margin: 150px;
+    margin-top: 70px;
+}
+.player-detail, h2, p{
+    padding: 15px;
 }
