--- a/style.css
+++ b/style.css
@@ -23,12 +23,7 @@ body{
 }
 .header-div-1{
     width: 50%;
-   
-   
-    
 }
-
-
 .header-font-1{
     color: white;
 }
@@ -45,14 +40,17 @@ body{
     
 } 
 .live-button:hover{
+    
     background-color: coral;
     color: darkmagenta;
+    
 }
+
 
 .header-div-2 img{
     width: 500px;
     border-radius: 10px;
-    margin-top: 200px;
+    margin-top: 100px;
 }
 
 /* Main Section, Player list Style */
@@ -83,11 +81,13 @@ body{
     font-size: 16px;
 }
 .player-detail, h2{
-   
-    
     margin-left: 15px;
     font-size: 28px;
     font-weight: bold;
+}
+.blog{
+    text-align: center;
+    padding-bottom: 20px;
 }
 
 /* Footer section start */
@@ -153,6 +153,8 @@ footer {
         grid-template-columns: repeat(1, 1fr);
         margin-left: 0;
     }
+    
+    /* footer section */
     footer img{
         width: 200px;
         height: 80px;
